--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MoodFlow - Mood Tracker</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -12,16 +14,17 @@
 
     <!-- Mood Selection -->
     <div id="mood-selector">
-        <button class="mood-btn" onclick="showRandomQuote('happy')">😊 Happy</button>
-        <button class="mood-btn" onclick="showRandomQuote('uplifting')">😢 Sad</button>
-        <button class="mood-btn" onclick="showRandomQuote('anxiety')">😰 Anxious</button>
+        <h2>Motivational Quote</h2>
+        <p>Click on a mood to receive a quote!</p>
+        <button class="btn btn-primary" onclick="showRandomQuote('happy')">😊 Happy</button>
+        <button class="btn btn-primary" onclick="showRandomQuote('uplifting')">😢 Sad</button>
+        <button class="btn btn-primary" onclick="showRandomQuote('anxiety')">😰 Anxious</button>
     </div>
+    <br />
 
     <!-- Display Motivational Quote -->
-    <div id="quote-section">
-        <h2>Motivational Quote</h2>
-        <p id="quote">Click on a mood to receive a quote!</p>
-    </div>
+    <div id="quote-section"></div>
+    <br />
 
     <!-- Mood History -->
     <div id="mood-history">
@@ -31,9 +34,12 @@
 </div>
 
 <div id="card-list"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 <script src="assets/script.js"></script>
 </body>
 </html>
 
 
-<footer> </footer>
+<footer></footer>
