add a filter to the history

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,9 +27,10 @@
     <br/>
 
     <!-- Mood History -->
-    <div id="mood-history">
-        <h2>Past Moods</h2>
-        <ul id="history-list"></ul>
+    <h2>Past Moods</h2>
+    <div class="mb-3">
+        <label for="findQuote" class="form-label">Find Quote</label>
+        <input type="text" class="form-control" id="findQuote">
     </div>
     <table class="table">
         <thead>
