--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,22 +8,25 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles.css">
 </head>
-<body>
-<nav class="navbar bg-body-tertiary">
+<body class="bg-light">
+<nav class="navbar bg-body-tertiary shadow mb-5">
     <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">MoodFlow</span>
     </div>
 </nav>
 <div class="container">
-    <h1>How are you feeling today?</h1>
+    <h1 class="text-center">How are you feeling today?</h1>
 
     <!-- Mood Selection -->
-    <div id="mood-selector">
-        <p>Click on a mood to receive a quote!</p>
-        <button class="btn btn-primary" onclick="showRandomQuote('happy')">😊 Happy</button>
-        <button class="btn btn-primary" onclick="showRandomQuote('uplifting')">😢 Sad</button>
-        <button class="btn btn-primary" onclick="showRandomQuote('anxiety')">😰 Anxious</button>
+    <div class="d-flex flex-column align-items-center" id="mood-selector">
+        <p class="mb-3">Click on a mood to receive a quote!</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-center">
+            <button class="btn btn-light shadow-sm" onclick="showRandomQuote('happy')">😊 Happy</button>
+            <button class="btn btn-light shadow-sm" onclick="showRandomQuote('uplifting')">😢 Sad</button>
+            <button class="btn btn-light shadow-sm" onclick="showRandomQuote('anxiety')">😰 Anxious</button>
+        </div>
     </div>
+
     <br/>
 
     <!-- Display Motivational Quote -->
@@ -45,7 +48,7 @@
             </select>
         </div>
     </div>
-    <table class="table">
+    <table class="table table-light table-striped table-hover">
         <thead>
         <tr>
             <th scope="col">Quote</th>
