--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles.css">
+    <title>MoodFlow</title>
 </head>
 <body class="bg-light">
 <nav class="navbar bg-body-tertiary shadow mb-5">
@@ -40,11 +41,11 @@
             <label for="findQuote" class="form-label">Find Quote</label>
             <input type="text" class="form-control" id="findQuote">
         </div>
-        <div class="mx-2 mb-2 flex-fill">by</div>
-        <div class="flex-fill w-50">
+        <div class="flex-fill w-50 mx-2">
+            <label for="findQuoteBy" class="form-label">by</label>
             <select id="findQuoteBy" class="form-select">
-                <option value="by_content">Quote Content</option>
-                <option value="by_author">Quote Author</option>
+                <option value="by_content">Content</option>
+                <option value="by_author">Author</option>
             </select>
         </div>
     </div>
