fixed UI - white page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="assets/styles.css">
     <title>MoodFlow</title>
 </head>
-<body class="bg-light">
-<nav class="navbar bg-body-tertiary shadow mb-5">
+<body>
+<nav class="navbar shadow mb-5">
     <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">MoodFlow</span>
     </div>
@@ -69,6 +69,3 @@
 <script src="assets/script.js"></script>
 </body>
 </html>
-
-
-<footer></footer>
