--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,24 +7,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles.css">
+
+    <!--  Font coming from: https://fonts.google.com/selection/embed  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Delius+Swash+Caps&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet">
+
     <title>MoodFlow</title>
 </head>
 <body>
 <nav class="navbar shadow mb-5">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1">MoodFlow</span>
+        <span class="navbar-brand text-white delius-swash-caps-regular">MoodFlow</span>
     </div>
 </nav>
 <div class="container">
-    <h1 class="text-center">How are you feeling today?</h1>
+    <h1 class="text-center delius-swash-caps-regular text-white">How are you Feeling today?</h1>
 
     <!-- Mood Selection -->
     <div class="d-flex flex-column align-items-center" id="mood-selector">
-        <p class="mb-3">Click on a mood to receive a quote!</p>
+        <p class="mb-3 italic-white">Click on a mood to receive a quote!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-center">
-            <button class="btn btn-light shadow-sm" onclick="showRandomQuote('happy')">😊 Happy</button>
-            <button class="btn btn-light shadow-sm" onclick="showRandomQuote('uplifting')">😢 Sad</button>
-            <button class="btn btn-light shadow-sm" onclick="showRandomQuote('anxiety')">😰 Anxious</button>
+            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('happy')">😊 Happy</button>
+            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('uplifting')">😢 Sad</button>
+            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('anxiety')">😰 Anxious</button>
         </div>
     </div>
 
@@ -35,21 +42,21 @@
     <br/>
 
     <!-- Mood History -->
-    <h2>Past Moods</h2>
+    <h2 class="text-white delius-swash-caps-regular">Past Moods</h2>
     <div class="d-flex flex-row align-items-end mb-3">
         <div class="flex-fill w-100">
-            <label for="findQuote" class="form-label">Find Quote</label>
+            <label for="findQuote" class="form-label text-white">Find Quote</label>
             <input type="text" class="form-control" id="findQuote">
         </div>
         <div class="flex-fill w-50 mx-2">
-            <label for="findQuoteBy" class="form-label">by</label>
+            <label for="findQuoteBy" class="form-label text-white">by</label>
             <select id="findQuoteBy" class="form-select">
                 <option value="by_content">Content</option>
                 <option value="by_author">Author</option>
             </select>
         </div>
     </div>
-    <table class="table table-light table-striped table-hover">
+    <table class="table table-light table-striped table-borderless table-hover">
         <thead>
         <tr>
             <th scope="col">Quote</th>
