--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,9 +29,15 @@
     <div class="d-flex flex-column align-items-center" id="mood-selector">
         <p class="mb-3 italic-white">Click on a mood to receive a quote!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-center">
-            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('happy')">😊 Happy</button>
-            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('uplifting')">😢 Sad</button>
-            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('anxiety')">😰 Anxious</button>
+            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('happy')">😊
+                Happy
+            </button>
+            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('uplifting')">😢
+                Sad
+            </button>
+            <button class="btn btn-light shadow-sm delius-swash-caps-regular" onclick="showRandomQuote('anxiety')">😰
+                Anxious
+            </button>
         </div>
     </div>
 
@@ -69,7 +75,20 @@
     </table>
 </div>
 
-<div id="card-list"></div>
+<!-- Comes from https://getbootstrap.com/docs/5.3/components/toasts/#overview -->
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="liveToast" class="toast align-items-center text-bg-danger p-3" role="alert"
+         aria-live="assertive" aria-atomic="true">
+        <div class="d-flex">
+            <div class="toast-body">
+                Fetching moods failed
+            </div>
+            <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                    aria-label="Close"></button>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
